# barnes-hut

./: Cargo.toml  README.md
src/: body.rs  main.rs  partition.rs  quadtree.rs  renderer.rs  simulation.rs  utils.rs
