[package]
name = "barnes-hut"
version = "0.1.0"
edition = "2021"

[dependencies]
quarkstrom = { git = "https://github.com/DeadlockCode/quarkstrom", rev = "8aa27dba1739f09b4d1372faa8553e64a3f0549d" }

ultraviolet = "0.9.2"
fastrand = "2.1.1"
broccoli = "6.3.0"
palette = "0.7.6"

parking_lot = "0.12.3"
once_cell = "1.20.1"
